--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
 services:
-    laravel.test:
+    queue-app:
         build:
-            context: './vendor/laravel/sail/runtimes/8.4'
+            context: './docker'
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: 'sail-8.4/app'
+        container_name: 'queue-app'
+        image: 'joowdx/laravel:queue-app'
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            - '${VITE_REVERB_PORT:-8080}:${VITE_REVERB_PORT:-8080}'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
+            REVERB_HOST: '${REVERB_HOST:-0.0.0.0}'
+            REVERB_PORT: '${REVERB_PORT:-8080}'
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - queue-app
         depends_on:
             - mysql
-            - redis
     mysql:
+        container_name: 'queue-app-mysql'
         image: 'mysql/mysql-server:8.0'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -36,10 +40,10 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - 'queue-app-mysql:/var/lib/mysql'
+            - './docker/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
-            - sail
+            - queue-app
         healthcheck:
             test:
                 - CMD
@@ -48,26 +52,11 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
-        networks:
-            - sail
-        healthcheck:
-            test:
-                - CMD
-                - redis-cli
-                - ping
-            retries: 3
-            timeout: 5s
 networks:
-    sail:
+    queue-app:
+        name: queue-app
         driver: bridge
 volumes:
-    sail-mysql:
-        driver: local
-    sail-redis:
+    queue-app-mysql:
+        name: queue-app-mysql
         driver: local
